--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
 </head>
 
 <body>
-<p><b></b><font size="5"><b><a name="PTOP"></a>ENGI-3440 - Files and Utilities Repository</b>
+<p><font size="5"><b><a name="PTOP"></a></b>
 </font> </p>
-<p><font size="2">Maintained by: Prof. Ricardo Bravo - ricbrav@gmail.com</font></p>
+<hr>
+<p><b></b><font size="5"><b>ENGI-3440 - Files and Utilities Repository</b>
+</font> </p>
+<p><font size="2">Maintained by: Prof. Ricardo Bravo - 
+<a href="mailto:ricbrav@gmail.com">ricbrav@gmail.com</a></font></p><hr>
+<p><a name="HTT-TOP"></a><b><font size="4">Property Tables for Heat Transfer*</font></b></p>
+<p>The convention used to present numerical values in heat transfer property 
+tables is illustrated by this example:</p>
+<p><img border="0" src="convention1.png" width="422" height="116"></p>
+<ul>
+	<li><b>Table HT-1</b> - <a href="#HT1">Thermophysical Properties of Selected 
+	Technical Materials</a></li>
+	<li><b>Table HT-2</b> - <a href="#HT2">Thermophysical Properties of Selected 
+	Common Materials</a></li>
+	<li><b>Table HT-3</b> - <a href="#HT3">Thermophysical Properties of Gases at 
+	Atmospheric Pressure</a></li>
+	<li><b>Table HT-4</b> - <a href="#HT4">Thermophysical Properties of 
+	Saturated Liquids </a></li>
+	<li><b>Table HT-5</b> - <a href="#HT5">Thermophysical Properties of 
+	Saturated Water</a> </li>
+</ul>
 <p>&nbsp;</p>
-<p><b><font size="4">Property Tables for Thermodynamics</font></b></p>
+<p><b><font size="4"><a name="TT-TOP"></a>Property Tables for Thermodynamics*</font></b></p>
+<p>The convention used to present numerical values of specific volume of liquids 
+in the international system (SI) tables for thermodynamics is illustrated by 
+this example:</p>
+<p><img border="0" src="convention2.png" width="207" height="104"></p>
 <ul>
 	<li><b>Table T-1</b> - Atomic or Molecular Weights and Critical Properties 
 	of Selected Elements and Compounds - <a href="#T1-SI-E">International System 
@@ -39,40 +63,92 @@
 	<a href="#T11-SI">International System</a> / <a href="#T11-E">English System</a></li>
 </ul>
 <p>&nbsp;</p>
-<p><b><font size="4">Tables:</font></b></p>
+<p><font size="2">*Source of this content: </font></p>
+<p><font size="2">Moran M, Shapiro H, Munson B, DeWitt D (2003) <i>Introduction 
+to Thermal Systems Engineering:Thermodynamics, Fluid Mechanics, and Heat 
+Transfer</i>. 1st ed. John Wiley &amp; Sons, Inc. </font></p>
 <p>&nbsp;</p>
+<hr>
+<p><b><font size="5">Tables:</font></b></p>
+<hr>
+<p><b><font size="4">Property Tables for Heat Transfer:</font></b></p>
+<p><b><a name="HT1"></a>Table HT-1 Thermophysical Properties of Selected 
+Technical Materials</b><i> - </i><font size="2"><a href="#HTT-TOP">Go to heat 
+transfer tables</a> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
+<p><img border="0" src="Table_HT-1_1of2.png" width="961" height="727"></p>
+<p><img border="0" src="Table_HT-1_2of2.png" width="965" height="714"></p>
+<p>&nbsp;</p>
+<p><b><a name="HT2"></a>Table HT-2 Thermophysical Properties of Selected Common 
+Materials</b><i> - </i><font size="2"><a href="#HTT-TOP">Go to heat transfer 
+tables</a> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
+<p><img border="0" src="Table_HT-2_1of2.png" width="664" height="973"></p>
+<p><img border="0" src="Table_HT-2_2of2.png" width="664" height="925"></p>
+<p>&nbsp;</p>
+<p><b><a name="HT3"></a>Table HT-3 Thermophysical Properties of Gases at 
+Atmospheric Pressure</b><i> - </i><font size="2"><a href="#HTT-TOP">Go to heat 
+transfer tables</a> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
+<p><img border="0" src="Table_HT-3.png" width="663" height="862"></p>
+<p>&nbsp;</p>
+<p><b><a name="HT4"></a>Table HT-4 Thermophysical Properties of Saturated 
+Liquids</b><i> - </i><font size="2"><a href="#HTT-TOP">Go to heat transfer 
+tables</a> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
+<p><img border="0" src="Table_HT-4.png" width="716" height="832"></p>
+<p>&nbsp;</p>
+<p><b><a name="HT5"></a>Table HT-5 Thermophysical Properties of Saturated Water</b><i> - </i>
+<font size="2"><a href="#HTT-TOP">Go to heat transfer tables</a> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a><b> </b></p>
+<p><img border="0" src="Table_HT-5.png" width="711" height="690"></p><hr>
+<p><b><font size="4">Property Tables for Thermodynamics:</font></b></p>
 <p><b>Table T-1 - Atomic or Molecular Weights and Critical Properties of 
 Selected Elements and Compounds&nbsp; </b></p>
-<p><a name="T1-SI-E"></a><i>International System / English System -
-<a href="#PTOP">Go to top</a></i></p>
+<p><a name="T1-SI-E"></a><i>International System / English System - </i>
+<a href="#TT-TOP"><font size="2">Go to thermodynamics tables</font></a><font size="2"> 
+/ </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-1_and_T-1E.png" width="712" height="741"></p>
 <p>&nbsp;</p>
 <p><b>Table T-2 - Properties of Saturated Water (Liquid-Vapor): Temperature 
 Table</b></p>
-<p><i><a name="T2-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T2-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-2_1of2.png" width="744" height="1029"></p>
 <p><img border="0" src="Table_T-2_2of2.png" width="740" height="649"></p>
 <p>&nbsp;</p>
-<p><i><a name="T2-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T2-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-2E_1of2.png" width="747" height="877"></p>
 <p><img border="0" src="Table_T-2E_2of2.png" width="747" height="956"></p>
 <p>&nbsp;</p>
 <p><b>Table T-3 - Properties of Saturated Water (Liquid-Vapor): Pressure</b></p>
-<p><i><a name="T3-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T3-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-3_1of2.png" width="740" height="320"></p>
 <p><img border="0" src="Table_T-3_2of2.png" width="733" height="868"></p>
 <p>&nbsp;</p>
-<p><i><a name="T3-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T3-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-3E_1of2.png" width="747" height="874"></p>
 <p><img border="0" src="Table_T-3E_2of2.png" width="747" height="718"></p>
 <p>&nbsp;</p>
 <p><b>Table T-4 - Properties of Superheated Water Vapor</b></p>
-<p><i><a name="T4-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T4-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-4_1of3.png" width="741" height="799"></p>
 <p><img border="0" src="Table_T-4_2of3.png" width="739" height="814"></p>
 <p><img border="0" src="Table_T-4_3of3.png" width="587" height="817"></p>
 <p>&nbsp;</p>
-<p><i><a name="T4-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T4-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-4E_1of5.png" width="745" height="819"></p>
 <p><img border="0" src="Table_T-4E_2of5.png" width="747" height="827"></p>
 <p><img border="0" src="Table_T-4E_3of5.png" width="748" height="557"></p>
@@ -80,60 +156,88 @@ Table</b></p>
 <p><img border="0" src="Table_T-4E_5of5.png" width="589" height="867"></p>
 <p>&nbsp;</p>
 <p><b>Table T-5 Properties of Compressed Liquid Water</b></p>
-<p><i><a name="T5-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T5-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-5.png" width="742" height="1141"></p>
 <p>&nbsp;</p>
-<p><i><a name="T5-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T5-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-5E.png" width="663" height="818"></p>
 <p>&nbsp;</p>
 <p><b>Table T-6 Properties of Saturated Refrigerant 134a (Liquid-Vapor): 
 Temperature Table</b></p>
-<p><i><a name="T6-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T6-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-6.png" width="740" height="868"></p>
 <p>&nbsp;</p>
-<p><i><a name="T6-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T6-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-6E.png" width="724" height="712"></p>
 <p>&nbsp;</p>
 <p><b>Table T-7 Properties of Saturated Refrigerant 134a (Liquid-Vapor): 
 Pressure Table </b></p>
-<p><i><a name="T7-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T7-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-7.png" width="736" height="615"></p>
 <p>&nbsp;</p>
-<p><i><a name="T7-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T7-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-7E.png" width="721" height="594"></p>
 <p>&nbsp;</p>
 <p><b><a name="T8-SI"></a>Table T-8 Properties of Superheated Refrigerant 134a Vapor </b></p>
-<p><i>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i>International System - </i><a href="#TT-TOP"><font size="2">Go to 
+thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-8_1of2.png" width="719" height="855"></p>
 <p><img border="0" src="Table_T-8_2of2.png" width="723" height="925"></p>
 <p>&nbsp;</p>
-<p><i><a name="T8-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T8-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-8E_1of2.png" width="722" height="879"></p>
 <p><img border="0" src="Table_T-8E_2of2.png" width="718" height="900"></p>
 <p>&nbsp;</p>
 <p><b>Table T-9 Ideal Gas Properties of Air</b></p>
-<p><i><a name="T9-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T9-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-9_1of2.png" width="719" height="906"></p>
 <p><img border="0" src="Table_T-9_2of2.png" width="724" height="432"></p>
 <p>&nbsp;</p>
-<p><i><a name="T9-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T9-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-9E_1of2.png" width="716" height="905"></p>
 <p><img border="0" src="Table_T-9E_2of2.png" width="721" height="321"></p>
 <p>&nbsp;</p>
 <p><b>Table T-10 Ideal Gas Specific Heats of Some Common Gases</b></p>
-<p><i><a name="T10-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T10-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-10.png" width="725" height="368"></p>
 <p>&nbsp;</p>
-<p><i><a name="T10-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T10-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-10E.png" width="724" height="319"></p>
 <p>&nbsp;</p>
 <p><b>Table T-11 Ideal Gas Properties of Selected Gases</b></p>
-<p><i><a name="T11-SI"></a>International System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T11-SI"></a>International System - </i><a href="#TT-TOP">
+<font size="2">Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-11_1of3.png" width="963" height="702"></p>
 <p><img border="0" src="Table_T-11_2of3.png" width="967" height="724"></p>
 <p><img border="0" src="Table_T-11_3of3.png" width="975" height="357"></p>
 <p>&nbsp;</p>
-<p><i><a name="T11-E"></a>English System - <a href="#PTOP">Go to top</a></i></p>
+<p><i><a name="T11-E"></a>English System - </i><a href="#TT-TOP"><font size="2">
+Go to thermodynamics tables</font></a><font size="2"> / </font>
+<a href="#PTOP"><font size="2">Go to top</font></a></p>
 <p><img border="0" src="Table_T-11E_1of3.png" width="967" height="708"></p>
 <p><img border="0" src="Table_T-11E_2of3.png" width="965" height="717"></p>
 <p><img border="0" src="Table_T-11E_3of3.png" width="961" height="296"></p>
